整理大纲，约束剖分PPT。

--- a/原理.md
+++ b/原理.md
@@ -25,7 +25,7 @@ public static void main(String []args) throws Exception {
 
 ![image-20230830090038913](./assets/image-20230830090038913.png)
 
-
+![image-20241002170856446](./assets/image-20241002170856446.png)
 
 ![image-20230830090137723](./assets/image-20230830090137723.png)
 
@@ -180,7 +180,7 @@ addOutBounds(innerlinesTopVertices,cListTop);
 
 ## 3、核心 IncrementalTin类
 
-```
+```java
  * Provides methods and data elements for building and maintaining a
  * Triangulated Irregular Network (TIN) that is optimal with regard to the
  * Delaunay criterion.
@@ -478,8 +478,8 @@ addOutBounds(innerlinesTopVertices,cListTop);
 
 <img src="./assets/image-20240529143151076.png" alt="image-20240529143151076" style="zoom:50%;" />
 
-- 对于 a, b, c 三个三角形，我们把所有不包含 𝑃 的边标记为可疑边。
-- 对于所有可疑边，我们选择与插入点 𝑃 根据可疑边对立的顶点 q。设可疑边两个顶点为 x, y。此时 p, x, q, y 组成了一个四边形，**如果 q 在 p, x, y 组成的圆里**，那么我们要对四边形 p, x, q, y 进行**边翻转**操作。
+- 对于 a, b, c 三个三角形，我们把所有**不包含 𝑃 的边**标记为**可疑边**。
+- 对于**所有可疑边**，我们选择与插入点 𝑃 根据可疑边对立的顶点 q。设可疑边两个顶点为 x, y。此时 p, x, q, y 组成了一个四边形，**如果 q 在 p, x, y 组成的圆里**，那么我们要对四边形 p, x, q, y 进行**边翻转**操作。
 
 <img src="./assets/image-20240529143203332.png" alt="image-20240529143203332" style="zoom:50%;" />
 
@@ -705,7 +705,7 @@ Definition 3.5 (Constrained Voronoï diagram)
 
 ![image-20240103155026805](./assets/image-20240103155026805.png)
 
-# 三、核心类的方法实现
+# 三、核心类方法的实现
 
 ## 3.1源码流程
 
@@ -719,7 +719,7 @@ edgePool.allocateEdge(v[0], v[1]
 
 ```
 
-
+## 创建IncrementalTin类
 
 ### 1.add(Vertex):boolean 添加顶点
 
@@ -744,10 +744,11 @@ public boolean add(final Vertex v) {
       
     if (isBootstrapped) 
     {
-      //如果已经初始化成功找到了初始三角形，则直接进行新点插入的过程
+      //如果已经初始化成功找到了初始三角形，则直接进行新点插入-剖分
       return addWithInsertOrAppend(v);
     } else
      {
+      //算法进入初始化阶段
              if (vertexList == null) 
              {
                  //vertexList，顶点的临时列表，在三角网成功初始化后保留，然后丢弃。
@@ -758,7 +759,9 @@ public boolean add(final Vertex v) {
         
           //运行到此处，说明三角网格未初始化但临时顶点列表(vertexList)中已经存在顶点
           vertexList.add(v);
+      
           boolean status = bootstrap(vertexList);//成功则为true
+      
           //至少三个点才能初始化，第一次测试时，status在塞入六个顶点变为true，
           //所以并不是任意三个顶点就可以，需要进一步查看引导函数bootstrap（）
           //查看以后，需要满足三个顶点形成三角形面积大于最小阙值
@@ -882,9 +885,7 @@ public boolean add(final Vertex v) {
 
 ```
 
-
-
-#### 1.3、bootstrap( List<Vertex<x>>) :boolean 启动初始化
+### 1.3、bootstrap( List<Vertex<x>>) :boolean 启动初始化
 
 ```java
 /**
@@ -902,7 +903,7 @@ public boolean add(final Vertex v) {
    * @return if successful, true; otherwise, false.
    */
 private boolean bootstrap(final List<Vertex> list) {
-    //进行初始化，如果成功在返回初始三角形的三个顶点，否则返回null
+    //进行初始化，如果成功初始化，返回初始顺时针的三角形的三个顶点，否则返回null
     Vertex[] v = new BootstrapUtility(thresholds).bootstrap(list);
     if (v == null) {
       return false;
@@ -973,7 +974,35 @@ private boolean bootstrap(final List<Vertex> list) {
 
 ```
 
-##### //BootstrapUtility(thresholds).bootstrap(list);|真正的初始化启动函数
+在初始化三角形之后，这段代码主要做了以下几件事：
+
+1. **创建边（QuadEdge）：**
+   - 初始化三角形之后，系统需要为三角形的三个顶点分配边缘缓存。
+   - 使用 `edgePool.allocateEdge` 方法分别为三个顶点创建对应的边 `e1`, `e2`, `e3`，并为每个顶点创建一个延伸到“无限远”的边 `e4`, `e5`, `e6`，这些边是为了构建一个包含整个平面（延伸到无穷）的结构。
+
+2. **设置孪生边（Dual Edges）：**
+   - 为了支持高效的边操作和剖分过程，每个边都会有一个**孪生边**，即从终点指向起点的对称边。代码通过 `getDual()` 方法获取这些孪生边 (`ie1`, `ie2`, `ie3`, `ie4`, `ie5`, `ie6`)。
+   - 孪生边在三角剖分算法中特别重要，允许在边之间快速进行导航，特别是在操作邻近三角形时。
+
+3. **建立初始TIN（初始三角网）的边缘连接：**
+   - 通过设置边的前驱边 (`setForward()` 方法)，代码将这些边连接起来，形成一个完整的三角形网格（TIN）。
+   - `e1`, `e2`, `e3` 分别表示三角形的三条边，`e4`, `e5`, `e6` 则是对应的“无限远”的边，与孪生边一起形成了边界结构。通过前驱边的设置，这些边形成了一个闭环。
+   - 这种连接方式允许后续的算法在插入新的点时，能够高效地处理三角网的结构，并确保数据结构的完整性。
+
+4. **设置初始TIN已启动标志：**
+   - 变量 `isBootstrapped` 被设置为 `true`，表示初始的三角网格已经成功启动，之后可以开始处理新的点和边。
+
+5. **更新边界（Boundary）值：**
+   - 代码计算并更新 `boundsMinX`, `boundsMaxX`, `boundsMinY`, `boundsMaxY` 这四个边界值。因为初始化的三角形已经是三角网格的一部分，后续插入新的顶点时，会对其坐标进行边界检查（确保新点位于当前网格范围内）。
+   - 在这里，**通过遍历三角形的三个顶点，找到最小和最大的 x、y 值，并将这些值存储为当前三角网的边界**。
+
+总结：
+
+在初始化三角形后，代码通过创建边（包括孪生边）、建立初始的三角网格连接、标记三角网已经成功初始化，并计算初始三角形的边界，完成了三角网格的基本结构搭建。这样可以为后续的顶点插入、边剖分等操作提供必要的基础结构。
+
+##### BootstrapUtility(thresholds).bootstrap(list);|真正的初始化三角形启动函数
+
+如果在该过程中给找到了就是返回一个顺时针顺序的三角形的三个顶点。
 
 ```java
   public Vertex[] bootstrap(final List<Vertex> list) {
@@ -1115,36 +1144,39 @@ private boolean bootstrap(final List<Vertex> list) {
 
 ```
 
-`bootstrap` 方法是一个几何处理算法的一部分，主要用于使用初始顶点集合来初始化诸如不规则三角网（TIN）这样的结构，它尝试找到形成一个非退化三角形的三个顶点。输入是 `Vertex` 对象的列表，输出是组成这样一个三角形的三个 `Vertex` 对象的数组，或者在找不到合适的三角形时返回 `null`。
+这段代码是 `BootstrapUtility` 类的 `bootstrap` 方法，它负责从输入的顶点列表中选择三个顶点，作为**增量德劳内三角剖分的初始三角形**。它的逻辑如下：
 
-以下是该方法的逐步解读：
+1. **初步检查**：  
+   - 首先检查输入的 `list` 是否至少包含 3 个顶点。如果少于 3 个顶点，返回 `null`，表示无法生成三角形。
+   - 创建两个数组 `v` 和 `vtest`，分别**存储最终选择的三个顶点和用于测试的顶点**。
 
-1. **初步检查**：
-   - 如果列表中的顶点数少于3个，则立即返回 `null`，因为少于3个点无法形成三角形。
-2. **设置**：
-   - 创建了两个顶点数组 `v` 和 `vtest`，用来存储最佳得分三角形（`v`）和当前候选三角形（`vtest`）。
-   - 初始化变量 `bestScore` 为负无穷大，用以存储迄今为止发现的最佳三角形的面积。
-   - 计算 `nTrial` 的值，这个值决定将进行多少次随机试验来寻找一个好的起始三角形。
-3. **随机试验**：
-   - 如果恰好有3个顶点在列表中，它们直接被用作三角形而不进行随机试验。
-   - 否则，进行多次试验，随机挑选三个不同的顶点，并检查它们是否形成有效的三角形（即面积非零）。
-   - 在试验过程中，如果找到更好的三角形（面积更大），则将其顶点保存在 `v` 中。
-4. **面积阈值**：
-   - 考虑了三角形的最小面积阈值（`triangleMinAreaThreshold`），只接受面积超过此阈值的三角形。
-   - 如果找到的最佳三角形满足面积要求，则返回其顶点。
-5. **处理边缘情况**：
-   - 如果只有3个顶点且没有找到有效的三角形，则返回 `null`。
-   - 如果随机试验未能产生有效的三角形，将调用更复杂的测试 (`testInput`) 来检测病态案例（例如所有顶点都相同或共线）或者找到一个有效的三角形。
-   - 根据 `testInput` 的结果，该方法可能返回一个有效的三角形，或者决定继续进行没有意义并返回 `null`。
-6. **详尽搜索**：
-   - 如果 `testInput` 方法无法确定一个好的三角形，也无法判断数据是否是病态的，那么它将采用详尽搜索，尝试每一组三个顶点的组合，以寻找一个有效的三角形。
-   - 如果在这种搜索中找到了满足面积标准的有效三角形，则返回其顶点。
-7. **失败情况**：
-   - 如果包括详尽搜索在内的所有方法都失败了，该方法返回 `null`，表示无法用当前的顶点集找到一个有效的初始三角形。
+2. **随机挑选顶点**：  
+   - 通过计算 `nTrial` **决定试验次数**（即需要尝试的次数）。  
+   - 如果列表中正好有 3 个顶点，则直接使用这 3 个顶点（`vtest[0]`，`vtest[1]`，`vtest[2]`）。  
+   - 如果有超过 3 个顶点，则**随机选择三个不同的顶点，并确保它们互不相同**。
 
-在整段代码中，我们看到了对特殊情况的检查，尝试处理它们，并最终作为最后手段进行详尽搜索，以确保在可能的情况下找到一个有效的引导三角形。如果方法返回 `null`，则表示存在病态情况或者顶点数量不足，无法形成有效的三角形。
+3. **计算面积**：  
+   - 使用 `geoOp.area()` 计算当前选取顶点形成三角形的面积。  
+   - **如果面积为 0，说明这三个点共线，跳过这次尝试。**  
+   - **如果面积为负数，说明三角形顶点的顺序是逆时针排列，通过交换 `vtest[0]` 和 `vtest[2]` 来调整为顺时针方向。**
 
-#### 1.4、addWithInsertOrAppend( Vertex ):boolean｜通过插入或扩展添加
+4. **保存最佳三角形**：  
+   - 如果计算出的**面积大于当前的最佳得分**（`bestScore`），则更新 `v` 数组中的顶点为当前的三个顶点。
+   - 继续尝试，直到找到一个**面积大于** `triangleMinAreaThreshold` 的三角形为止。
+
+5. **备用方案**：  
+   - 如果通过随机选择仍然没有找到符合条件的三角形，并且输入顶点多于 3 个，则会调用 `testInput()` 方法，尝试从输入中检测病态情况（例如所有点共线或重复）。
+   - 如果检测结果有效，则返回检测出的顶点。
+
+6. **穷尽搜索**：  
+   - **如果随机测试和病态检测都没有找到合适的顶点**，最后会进入一个穷举搜索，即尝试所有可能的三顶点组合，计算面积并选出符合要求的三角形。
+   - 如果找到一个面积大于 `triangleMinAreaThreshold` 的三角形，则返回。
+   - 否则，如果没有找到合适的三角形，返回 `null`，表明无法通过当前点集初始化三角剖分，**必须等待更多的顶点**。
+
+**总结**：  
+该方法的核心是从输入顶点集中选出面积最大且符合最小面积阈值的三角形，作为初始的三角剖分三角形。如果输入点不足，或者无法找到有效的三角形，则返回 `null`，等待更多顶点的加入。
+
+### 1.4、addWithInsertOrAppend( Vertex ):boolean｜通过插入或扩展添加
 
 ```java
 /**
@@ -1377,7 +1409,43 @@ private boolean addWithInsertOrAppend(final Vertex v) {
 
 通过上述计算和判断，代码可以确定是否需要对当前和邻接的三角形进行调整，以满足Delaunay三角网的条件。
 
-#### 1.5、stander目录下的StochasticLawsonsWalk.java判断内接圆
+`> **再一次梳理**
+
+`addWithInsertOrAppend`方法的目的是在已经建立了一个基础三角剖分框架（即TIN）后将一个新的顶点`v`插入这个框架中。这个方法采用了一个增量插入算法，该算法可以保证插入新顶点后，TIN依然满足德劳内条件。下面是对这个方法的详细解释：
+
+1. **更新边界**：
+   - 检查并更新TIN的边界坐标，以确保新的顶点位于边界范围内。
+
+2. **寻找包含新顶点的三角形**：
+   - 使用一种搜索机制（通常是定位算法），来找到一个包含新顶点位置`(x, y)`的三角形。`searchEdge`表示从某个起始边开始的搜索路径。
+
+3. **匹配检查**：
+   - 检查是否有与新顶点几乎重合的现有顶点。如果存在，则调用`mergeVertexOrIgnore`函数进行处理，返回`false`表示不需要进一步插入操作。
+
+4. **构建缓冲**：
+   - 设置一个缓冲区`buffer`来临时跟踪在构建过程中被移除和替换的边。
+
+5. **边插入**：
+   - 创建一个连接新顶点`v`和找到的三角形的其中一个顶点`anchor`的边，并逐步遍历所有与`anchor`相连的边，即遍历整个星形状结构。
+
+6. **Delaunay 条件检查**：
+   - 对于遍历过程中遇到的每个三角形，检查新顶点是否位于三角形的外接圆内部。如果是，则使用`inCircle...`函数等进行计算，这是为了满足德劳内三角剖分的条件。
+
+7. **调整边和三角形**：
+   - 如果新顶点位于某个三角形的外接圆内，则根据德劳内条件调整边，移除违反条件的三角形，并创建新的符合条件的三角形。
+   - 这个过程会连续进行直到覆盖所有与新顶点相关的三角形。
+
+8. **完成插入**：
+   - 当所有与新顶点相关的边都处理完毕，即形成了由新顶点和周围点组成的星形状结构，最终确保所有相关的新三角形都满足德劳内条件。
+   - 更新`searchEdge`指向新构建的边，以便下次插入可以从这里开始搜索。
+   - 更新一些统计信息，例如在构建过程中替换的边数。
+
+9. **返回结果**：
+   - 返回`true`表示顶点成功插入。
+
+这个方法在算法层面实现了德劳内三角剖分的关键步骤：在保持现有TIN结构有效的同时插入新的顶点。它通过直接操作QuadEdge数据结构来对TIN进行增量式的修改。这个数据结构具体地定义了边和顶点之间的关系，并允许高效地添加、删除和遍历边。
+
+### 1.5、stander目录下的StochasticLawsonsWalk.java判断内接圆
 
 ```java
 public QuadEdge findAnEdgeFromEnclosingTriangle(
