--- a/大纲.md
+++ b/大纲.md
@@ -1,76 +1,106 @@
-# 目录
+# 一、题目：
 
-1 绪论
+**基于WebGL的三维地质建模及可视化方法研究**
+
+**基于CDT的三维地质建模及可视化方法研究**
+
+# 二、创新点：
+
+1、方法的创新点：断层相交情况下的建模/巷道分岩性纹理
+
+2、系统开发的创新点
+
+# 三、目录
+
+## 1 绪论
 
 - 1.1 研究背景及意义
-
 - 1.2 国内外研究现状
-
+  - 1.2.1国外研究现状
+  - 1.2.2国内研究现状
 - 1.3 研究内容与技术路线
+  - 1.3.1研究内容
+  - 1.3.2技术路线
 
-2 基于 webGL 的三维地质建模可视化平台开发方法
+2 三维地质建模及可视化方法（**并入技术路线**）
 
 - 2.1 研发需求与目标
+- 2.2 平台开发关键技术分析（Web应用开发的技术、WebGL可视化开发的技术、三维模型构建）
 
-- 2.2 平台开发关键技术分析
+## 2 三维模型构建（>10公式）
 
-- 2.3 WebGL 第三方库 Three.is 主要功能
+- **2.1Delaunay 三角剖分方法**
+  - 2.1.1 遵循Delaunay准则的约束三角剖分（**公式**）
+  - 2.1.2 三维地质模型数据结构**（包括地层、断层、钻孔模型等等）**
 
-- 2.4三维网格构建
+- **2.2断层模型构建（公式）**
+  - 2.1.1 **相交断层模型的构建方法（**公式）创新点
+  - 2.1.2 断层模型网格化
 
-  - 2.4.1三维地质模型数据结构
+- **2.3地层模型构建**
 
-  - 2.4.2约束Delaunay三角剖分
+  - 2.1.1 CDT剖分数据源提取（**具体计算的内容、方法名**，）（**公式**）
 
-- 2.5 本章小结
+  - 2.1.3 地层数据网格化
 
-3.三维模型构建方法及可视化
+  - - 2.3.3 模型构建
 
-- 3.1 CDT剖分数据源的提取
+- **2.4地质模型集成**
 
-- 3.2 相交断层数据的处理
+  - 2.4.1 钻孔
+  - 2.4.2 剖面模型（勘探线、剖分的剖面）**坐标转换等**
+  - 2.4.3 地层模型
+  - 2.4.4 断层模型
+  - 2.4.5 .....
 
-- 3.3 三维模型可视化处理
-  - 3.3.1地层模型可视化
-  - 3.3.2 巷道模型可视化
+- **2.5 空间几何信息的计算**
 
-- 3.4 空间几何参数的计算
-  - 3.4.1 距离计算
-  - 3.4.1巷道纹理uv计算
+  - 2.4.1 地层层间距计算 **高程不同颜色显示**（**有额外的计算？三级：二级**）（公式）
+  - 2.4.2 
 
-4 地质三维模型可视化信息平台设计
+## 3 三维模型可视化方法（查阅确定一下标题）10
 
-- 4.1系统架构设计
-  - 4.1.1 体系结构
-  - 4.1.2 技术流程
-
-- 4.2空间信息获取
+- 3.1 Web可视化技术
+  - 3.1.1 WebGL技术
+  - 3.2.1 Threejs技术
+- 3.2构建三维可视化场景**（公式）**
+- 3.3模型渲染方法
+  - 3.4.1**巷道纹理uv计算方法**（公式）** **方法的创新点**
+- 3.4地质模型可视化（和3.3是否需要交换）
+  - 3.4.1 光照
+  - 3.4.2
+- 3.5三维地质模型交互功能**（公式）**
   - 4.2.1 射线追踪
   - 4.2.2 坐标转换
-
-- 4.3 空间交互功能
   - 4.3.1 巷道漫游
   - 4.3.2 点选功能
 
-- 4.4 系统功能测试
+## 4 三维可视化系统开发
 
-5 基于 WebGL 的地下工程三维基础信息平台开发
+**（部分伪代码）**
 
-- 5.1 平台总体框架搭建
+- 4.1系统架构设计
+  - 4.1.1 体系结构（原生H5开发**系统升级优化**为VUE3的框架开发）
+  - 4.1.2 技术流程
 
-- 5.2 构建三维场景以及三维地质模型集成
+- 4.2系统功能实现**（伪代码）**
+  - 4.2.1
+  - 4.2.1
+  - 系统功能测试
 
-- 5.3 三维地质模型交互功能实现
+**创新点：系统更新换代 优化** 提高开发效率、项目运行流畅等。 
 
-- 5.4 三维地质模型信息集成与展示
+代码复用 （数据结构 可视化方式 api等等）
 
-- 5.5 本章小结
+## 5、应用实例
 
-6 结论与展望
 
-- 6.1 结论
 
-- 6.2 展望
+## 6 结论与展望
+
+- 5.1 结论
+
+- 5.2 展望
 
 
 
