--- a/可视化梳理.md
+++ b/可视化梳理.md
@@ -1,8 +1,10 @@
+名称 geometry类型 material类型 （颜色、深度、透明度、可见性等等） 模型加载来源(shape、obj、off、txt) 变量及数据类型（json object数组/json objdect）  坐标系及其转换（前台转换后台转换）
+
 
 
 js变量（三维定义，类型），
 
-三维模型（gemetry类型，material类型，坐标转换）
+三维模型（geometry类型，material类型，坐标转换）
 
  threejs 的 语法 和 函数
 
@@ -50,3 +52,72 @@ textChinese（）
 chidu（）
 
 zuobiaozhou（）
+
+
+
+
+
+# transform
+
+缩放
+
+平移
+
+旋转
+
+坐标转换
+
+
+
+西安2000坐标系 经纬度
+
+ 西安80
+
+
+
+epsg
+
+![image-20241130145458853](./assets/image-20241130145458853.png)
+
+**坐标系**
+
+
+
+后端
+
+- 模型数据生成和坐标转换
+
+- 发送数据 提供接口
+
+
+
+前端
+
+- 请求数据
+
+- 数据读入（坐标转换）
+- 模型加载（纹理贴图 ）
+- 交互功能（透明度 颜色 显/隐等 ）
+-   模型层间距 求切面等 漫游 
+
+后端数据（会统一到一个坐标系）到web三维场景的转换。
+
+x -> z
+
+y -> x
+
+z -> y
+
+
+
+
+
+偏移量
+
+模型缩放比例
+
+模型几何中心放置原点
+
+
+
+请求
