--- a/可视化梳理.md
+++ b/可视化梳理.md
@@ -108,6 +108,12 @@ y -> x
 
 z -> y
 
+```js
+import ThreeManager from '../threeObject/ThreeManager';
+import RaycasterModule from '../threeObject/RaycasterModule';
+import LayerManager from '../threeObject/LayerManager';
+```
+
 
 
 
