--- a/可视化梳理.md
+++ b/可视化梳理.md
@@ -127,3 +127,30 @@ import LayerManager from '../threeObject/LayerManager';
 
 
 请求
+
+
+
+
+
+# 邢台系统
+
+可视化模型
+
+
+
+钻孔
+
+- 地质孔
+
+三维地质结构
+
+- 地层
+- 剖面体
+
+![image-20250107200123024](./assets/image-20250107200123024.png)
+
+交互功能
+
+- 层间距计算
+- 视角切换（鼠标控制or漫游模式）
+- 绑定指定地层，控制其透明度 颜色
