--- a/可视化梳理.md
+++ b/可视化梳理.md
@@ -141,6 +141,20 @@ z -> y
 
 - 性能优化（渲染 和 数据缓存 缓存机制等）
 
+## 模型数据
+
+后端统一一套坐标系
+
+
+
+从文件数据 转为 标准坐标
+
+标准坐标 统一 转成threejs可视化坐标（以某个模型为主计算偏移量，提供x y z参数）
+
+
+
+
+
 
 
 ## 模型渲染管理
@@ -382,3 +396,50 @@ getTunnelModel(params, true)
 - 如果未来需要新增其他模型请求方法，只需复制其中一个模板，替换 `url` 和 `方法名`。
 - 可以根据实际需要调整 `GET` 和 `POST` 请求方式，以及参数传递方式（`params` 或 `data`）。
 
+
+
+
+
+
+
+# 后端
+
+![image-20241218001026902](./assets/image-20241218001026902.png)
+
+9305
+
+bootstrap.yaml
+
+
+
+
+
+![image-20241218020107007](./assets/image-20241218020107007.png)
+
+
+
+
+
+# 邢台
+
+各个三维地质体模型的显隐
+
+- 地层 
+
+- 地质孔
+
+- 剖面
+
+### 交互
+
+层间距
+
+选定地层调节透明度√
+
+视角切换（漫游/鼠标控制）重置视角√
+
+
+
+
+
+![image-20250108204526502](./assets/image-20250108204526502.png)
