--- a/大纲.md
+++ b/大纲.md
@@ -18,6 +18,12 @@
 - 1.2 国内外研究现状
   - 1.2.1国外研究现状
   - 1.2.2国内研究现状
+  
+  按内容分类
+  
+  - 地质建模
+  
+  - 可视化
 - 1.3 研究内容与技术路线
   - 1.3.1研究内容
   - 1.3.2技术路线
@@ -27,7 +33,7 @@
 - 2.1 研发需求与目标
 - 2.2 平台开发关键技术分析（Web应用开发的技术、WebGL可视化开发的技术、三维模型构建）
 
-## 2 三维模型构建（>10公式）
+## 2 三维地质模型构建（>10公式）
 
 - **2.1Delaunay 三角剖分方法**
   - 2.1.1 遵循Delaunay准则的约束三角剖分（**公式**）
