--- a/可视化梳理.md
+++ b/可视化梳理.md
@@ -436,13 +436,17 @@ bootstrap.yaml
 
 - 剖面
 
-### 交互
+## 交互
 
-层间距
+### 1.视角切换（漫游/鼠标控制）重置视角√
 
-选定地层调节透明度√
+### 2.层间距计算
 
-视角切换（漫游/鼠标控制）重置视角√
+
+
+### 3.选定地层调节透明度
+
+### 
 
 
 
