--- a/可视化梳理.md
+++ b/可视化梳理.md
@@ -1,3 +1,11 @@
+
+
+![image-20250213215316165](./assets/image-20250213215316165.png)
+
+![image-20250213215451578](./assets/image-20250213215451578.png)![image-20250213215457689](./assets/image-20250213215457689.png)![image-20250213215503087](./assets/image-20250213215503087.png)![image-20250213215527767](./assets/image-20250213215527767.png)![image-20250213215537963](./assets/image-20250213215537963.png)
+
+![image-20250213215543772](./assets/image-20250213215543772.png)![image-20250213215613339](./assets/image-20250213215613339.png)![image-20250213215620931](./assets/image-20250213215620931.png)![image-20250213215628397](./assets/image-20250213215628397.png)
+
 名称 geometry类型 material类型 （颜色、深度、透明度、可见性等等） 模型加载来源(shape、obj、off、txt) 变量及数据类型（json object数组/json objdect）  坐标系及其转换（前台转换后台转换）
 
 
